Place files in correct spot and update filepaths

--- a/popup/helper-ui.html
+++ b/popup/helper-ui.html
@@ -7,15 +7,13 @@
 
   <body>
     <div id="popup-content">
-      <button>Frog</button>
-      <button>Turtle</button>
-      <button>Snake</button>
+      <button id="search-button">Search for Lenders</button>
       <button type="reset">Reset</button>
     </div>
     <div id="error-content" class="hidden">
-      <p>Can't beastify this web page.</p>
+      <p>Can't search this page.</p>
       <p>Try a different page.</p>
     </div>
-    <script src="choose_beast.js"></script>
+    <script src="search-lenders.js"></script>
   </body>
 </html>
