--- a/popup/ui.html
+++ b/popup/ui.html
@@ -17,6 +17,6 @@
       <p>Can't search this page.</p>
       <p>Try a different page.</p>
     </div>
-    <script src="ui.js"></script>
+    <script type="module" src="ui.js"></script>
   </body>
 </html>
