update styles and button functions

--- a/popup/ui.html
+++ b/popup/ui.html
@@ -8,15 +8,19 @@
   <body>
     <div id="popup-content">
       <button type ="search" id="search-button">Search for Lenders</button>
-      <button type="reset">Reset</button>
-    <div id="search-results">
+      <button type="clear" id="clear-button">Clear</button>
+    <div id="loading" class="hidden">
+      <img class="loading-icon" src="../icons/half-loading.svg" alt="loading">
+      <p>Grabbing codes. One sec...</p>
+    </div>
+    <div id="search-results" class="hidden">
+        <h2>Lender List</h2>
         <ul id="search-results__list"></ul>
     </div>
     </div>
     <div id="error-content" class="hidden">
-      <p>Can't search this page.</p>
-      <p>Try a different page.</p>
+      <p>Something went wrong. Try reloading the page.</p>
     </div>
-    <script type="module" src="ui.js"></script>
+    <script type="module" src="ui.js?reload=1"></script>
   </body>
 </html>
